--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Coder Clone NFT",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "TGRC2.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
