--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,25 @@
 {
-  "build/main.css": "http://localhost:8080/build/main.css",
-  "build/main.js": "http://localhost:8080/build/main.js",
-  "build/images/preview.png": "http://localhost:8080/build/images/preview.png",
-  "build/images/logo.png": "http://localhost:8080/build/images/logo.png",
-  "build/images/fav.png": "http://localhost:8080/build/images/fav.png"
+  "short_name": "NCC",
+  "name": "Coder Clone NFT",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
